# bkd-tp20-diag

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bkd_diag/: active_autoscan.py  autoscan.py  bkd_data.py  canif.py  cli.py  commands.py  correlate.py  dtc.py  engine_profiles.py  hvac_blocks.py  interactive.py  kwp.py  labels.py  mblocks.py  module_probe.py  openmmi_export.py  passive_validate.py  reporting.py  session_discovery.py  setup_discovery.py  tp20.py  trace_analyzer.py  utils.py  vehicle_profile.py
data/: autoscan_default.json  bkd_observed_blocks.csv  dtcs.csv  passive_signals_pq35_seed.json
docs/: ENGINE_PROFILES.md  GITHUB_PUSH.md  HVAC_MEASURED_VALUE_CATALOGUE.md  HVAC_MEASURING_BLOCK_WORKFLOW.md  INSTALL.md  OPENMMI_EXPORT.md  PASSIVE_CORRELATION.md  PUBLISHING.md  REGRESSION_TESTS.md  SAFETY.md  SPLITTER_CAPTURE_CHECKLIST.md  TRACE_CAPTURE.md  VCDS_MODULE_PROFILES.md  WORKFLOWS.md
docs/research/: pq35_passive_signals.md
exports/openmmi/: openmmi_seat_1p_pq35-infotainment_overlay.json  openmmi_seat_1p_pq35-infotainment_overlay.md  openmmi_seat_1p_pq35-infotainment_overlay_signals.json
reports/: autoscan_latest.json  autoscan_latest.md  autoscan_latest.txt
scripts/: bkd-diag
