[project]
name = "bkd-tp20-diag"
version = "0.7.0"
license = { text = "GPL-3.0-or-later" }
description = "Linux SocketCAN VW TP2.0/KWP2000 diagnostic tool for BKD/EDC16 engine ECU"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bkd-diag = "bkd_diag.cli:main"

[tool.setuptools]
packages = ["bkd_diag"]
include-package-data = true

[tool.setuptools.package-data]
bkd_diag = ["data/*.csv", "data/*.json"]
